Fix menu visibility bug

--- a/game/css/menu.css
+++ b/game/css/menu.css
@@ -23,7 +23,9 @@ html.menu-active {
 
 .menu-active #menu {
   top: 70px;
+  height: calc(100% - 70px);
   pointer-events: auto;
+  overflow: visible;
 }
 
 .menu-active #menu-top {
@@ -55,10 +57,11 @@ html.menu-active {
 
 #menu {
   position: absolute;
-  width: 100%; height: calc(100% - 70px);
+  width: 100%; height: 0;
   top: 100%;
   background-color: #fff;
-  transition: top .3s;
+  transition: top .3s, height .3s;
+  overflow: hidden;
 }
 
 #menu-top {
